compiler/testData/diagnostics/tests/sealed/NeverFinal.kt
// FIR_IDENTICAL
<!INCOMPATIBLE_MODIFIERS!>final<!> <!INCOMPATIBLE_MODIFIERS!>sealed<!> class Base {

}